--- a/index.html
+++ b/index.html
@@ -221,16 +221,63 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="py-20 text-center fade-in-section">
-             <div class="max-w-3xl mx-auto bg-gray-800 p-10 rounded-lg border border-gray-700">
-                <h2 class="text-3xl md:text-4xl font-bold text-white">Open to New Opportunities</h2>
-                <p class="text-lg text-gray-400 mt-4">
-                    I'm actively seeking new roles and challenges where I can contribute my skills in cloud and DevOps. If you have an interesting project or position, I would love to hear from you.
-                </p>
-                <div class="mt-8">
-                    <a href="mailto:aji.fauzan@example.com" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-blue-700 transition duration-300 inline-block glow-effect">
-                        aji.fauzan@example.com
-                    </a>
+        <section id="contact" class="py-20 fade-in-section">
+            <div class="max-w-6xl mx-auto">
+                <div class="text-center mb-12">
+                    <h2 class="text-3xl md:text-4xl font-bold text-white">Get In Touch</h2>
+                    <p class="text-lg text-gray-400 mt-2">Let's discuss your next project.</p>
+                </div>
+        
+                <div class="bg-gray-800 rounded-lg border border-gray-700 p-8 md:p-12">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+                        <!-- Left Column: Info & CTA -->
+                        <div>
+                            <h3 class="text-2xl font-bold text-white">Ready to Collaborate</h3>
+                            <p class="mt-4 text-gray-400">
+                                I'm always interested in discussing new opportunities, challenging projects, and innovative solutions in DevOps and cloud infrastructure.
+                            </p>
+                            <div class="mt-6 border-t border-gray-700 pt-6">
+                                <p class="text-gray-300">
+                                    <span class="font-semibold text-white">Availability:</span> Available for professional inquiries.
+                                </p>
+                                <p class="mt-2 text-gray-300">
+                                    <span class="font-semibold text-white">Opportunities:</span> Remote & On-site.
+                                </p>
+                            </div>
+                             <div class="mt-8">
+                                <a href="mailto:aji.fauzan@example.com" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-blue-700 transition duration-300 inline-block glow-effect">
+                                    aji.fauzan@example.com
+                                </a>
+                            </div>
+                        </div>
+        
+                        <!-- Right Column: Areas of Expertise -->
+                        <div>
+                            <h3 class="text-2xl font-bold text-white">Areas of Expertise</h3>
+                            <ul class="mt-4 space-y-3">
+                                <li class="flex items-center">
+                                   <svg class="w-5 h-5 text-blue-400 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                   <span class="text-gray-300">Cloud Migration & Architecture</span>
+                                </li>
+                                <li class="flex items-center">
+                                   <svg class="w-5 h-5 text-blue-400 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                   <span class="text-gray-300">DevOps Pipeline Implementation</span>
+                                </li>
+                                 <li class="flex items-center">
+                                   <svg class="w-5 h-5 text-blue-400 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                   <span class="text-gray-300">Infrastructure Automation</span>
+                                </li>
+                                 <li class="flex items-center">
+                                   <svg class="w-5 h-5 text-blue-400 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                   <span class="text-gray-300">Security & Compliance</span>
+                                </li>
+                                 <li class="flex items-center">
+                                   <svg class="w-5 h-5 text-blue-400 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                   <span class="text-gray-300">Team Leadership & Mentoring</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
