--- a/index.html
+++ b/index.html
@@ -35,16 +35,32 @@
             transform: scale(1.1);
         }
 
-        /* Animation for sections fading in on scroll */
+        /* Animation for sections and their children */
         .fade-in-section {
             opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+            transition: opacity 0.2s ease-in;
         }
         .fade-in-section.is-visible {
             opacity: 1;
+        }
+
+        .animate-child {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+        }
+
+        .fade-in-section.is-visible .animate-child {
+            opacity: 1;
             transform: translateY(0);
         }
+        
+        /* Staggered transition delays for the animations */
+        .fade-in-section.is-visible .animate-child:nth-child(1) { transition-delay: 0.1s; }
+        .fade-in-section.is-visible .animate-child:nth-child(2) { transition-delay: 0.2s; }
+        .fade-in-section.is-visible .animate-child:nth-child(3) { transition-delay: 0.3s; }
+        .fade-in-section.is-visible .animate-child:nth-child(4) { transition-delay: 0.4s; }
+        .fade-in-section.is-visible .animate-child:nth-child(5) { transition-delay: 0.5s; }
     </style>
 </head>
 <body class="antialiased">
@@ -56,6 +72,7 @@
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="#about" class="text-gray-300 hover:text-white transition duration-300">About</a>
                 <a href="#skills" class="text-gray-300 hover:text-white transition duration-300">Skills</a>
+                <a href="#experience" class="text-gray-300 hover:text-white transition duration-300">Experience</a>
                 <a href="#projects" class="text-gray-300 hover:text-white transition duration-300">Projects</a>
                 <a href="#contact" class="text-gray-300 hover:text-white transition duration-300">Contact</a>
             </nav>
@@ -71,13 +88,13 @@
         <!-- Hero/About Section -->
         <section id="about" class="min-h-screen flex items-center pt-24 pb-12 fade-in-section">
             <div class="max-w-4xl">
-                <h1 class="text-4xl md:text-6xl font-bold leading-tight tracking-tighter text-white">
+                <h1 class="text-4xl md:text-6xl font-bold leading-tight tracking-tighter text-white animate-child">
                     Experienced DevOps Engineer & Cloud Infrastructure Specialist
                 </h1>
-                <p class="mt-6 text-lg md:text-xl text-gray-400">
+                <p class="mt-6 text-lg md:text-xl text-gray-400 animate-child">
                     With over 7 years of expertise in cloud infrastructure, CI/CD pipelines, Infrastructure as Code (IaC), and Agile methodologies. Proven track record in leading DevOps teams, managing hybrid cloud environments, and ensuring compliance with ISO27001 standards. Strong focus on automation, monitoring, and security to deliver scalable and efficient solutions.
                 </p>
-                <div class="mt-10">
+                <div class="mt-10 animate-child">
                     <a href="#contact" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-blue-700 transition duration-300 glow-effect">
                         Get In Touch
                     </a>
@@ -87,14 +104,14 @@
 
         <!-- Skills Section -->
         <section id="skills" class="py-20 fade-in-section">
-            <div class="text-center mb-16">
+            <div class="text-center mb-16 animate-child">
                 <h2 class="text-3xl md:text-4xl font-bold text-white">Core Competencies</h2>
                 <p class="text-lg text-gray-400 mt-2 max-w-2xl mx-auto">I specialize in a modern tech stack designed for building scalable, resilient, and automated cloud infrastructure.</p>
             </div>
             <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-x-12 gap-y-16">
 
                 <!-- Category: Cloud & Containerization -->
-                <div class="flex items-start space-x-6 skill-category">
+                <div class="flex items-start space-x-6 skill-category animate-child">
                     <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container">
                         <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z" />
@@ -113,7 +130,7 @@
                 </div>
 
                 <!-- Category: CI/CD & Automation -->
-                 <div class="flex items-start space-x-6 skill-category">
+                 <div class="flex items-start space-x-6 skill-category animate-child">
                     <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container">
                         <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
@@ -131,7 +148,7 @@
                 </div>
 
                 <!-- Category: Monitoring & Observability -->
-                <div class="flex items-start space-x-6 skill-category">
+                <div class="flex items-start space-x-6 skill-category animate-child">
                     <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container">
                         <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
@@ -148,7 +165,7 @@
                 </div>
 
                 <!-- Category: Programming & Scripting -->
-                <div class="flex items-start space-x-6 skill-category">
+                <div class="flex items-start space-x-6 skill-category animate-child">
                     <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container">
                         <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
@@ -164,19 +181,70 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+        </section>
 
+        <!-- Work Experience Section -->
+        <section id="experience" class="py-20 fade-in-section">
+            <div class="text-center mb-16 animate-child">
+                <h2 class="text-3xl md:text-4xl font-bold text-white">Work Experience</h2>
+                <p class="text-lg text-gray-400 mt-2 max-w-2xl mx-auto">My professional journey and key roles.</p>
+            </div>
+            <div class="max-w-3xl mx-auto relative border-l-2 border-gray-700 pl-10">
+                <!-- Experience 1 -->
+                <div class="mb-12 relative animate-child">
+                    <div class="absolute -left-[46px] top-1.5 w-4 h-4 bg-blue-500 rounded-full border-4 border-gray-800"></div>
+                    <time class="text-sm font-semibold uppercase text-blue-400">July 2023 - Present</time>
+                    <h3 class="text-2xl font-bold text-white mt-1">DevOps Engineer Lead</h3>
+                    <p class="text-lg text-gray-400">ASYX</p>
+                    <div class="text-gray-300 mt-4 space-y-4">
+                        <p>Lead the DevOps team in designing, developing, and delivering software applications, ensuring adherence to project timelines, quality standards, and client requirements. Provide guidance, coaching, and performance feedback to team members.</p>
+                        <ul class="list-disc list-inside space-y-2">
+                            <li>Utilize Agile methodologies to manage development processes, including sprint planning, stand-ups, and retrospectives.</li>
+                            <li>Communicate effectively with stakeholders, team members, and management to provide project updates, manage expectations, and resolve issues.</li>
+                            <li>Demonstrate strong technical expertise in software development, coding languages, and frameworks to solve complex problems.</li>
+                            <li>ISM Role, Managed security policies, procedures, and vulnerability findings, initiating penetration tests with external vendors.</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Experience 2 -->
+                <div class="mb-12 relative animate-child">
+                    <div class="absolute -left-[46px] top-1.5 w-4 h-4 bg-blue-500 rounded-full border-4 border-gray-800"></div>
+                    <time class="text-sm font-semibold uppercase text-blue-400">August 2019 - July 2023</time>
+                    <h3 class="text-2xl font-bold text-white mt-1">DevOps Engineer</h3>
+                    <p class="text-lg text-gray-400">ASYX</p>
+                    <ul class="text-gray-300 mt-4 list-disc list-inside space-y-2">
+                        <li>Operated and maintained ASYX delivery pipelines and supporting systems, implementing changes to improve efficiency.</li>
+                        <li>Designed and created cloud environments based on application requirements.</li>
+                        <li>Monitored and secured ASYX hybrid cloud environments.</li>
+                        <li>Conducted research and development on the latest technology stacks and implemented them in ASYX environments.</li>
+                        <li>Developed and maintained CI/CD pipelines for application development and operational tasks.</li>
+                        <li>Contributed to the Compliance team by creating and maintaining ISO27001 policies and procedures.</li>
+                    </ul>
+                </div>
+                <!-- Experience 3 -->
+                <div class="relative animate-child">
+                    <div class="absolute -left-[46px] top-1.5 w-4 h-4 bg-blue-500 rounded-full border-4 border-gray-800"></div>
+                    <time class="text-sm font-semibold uppercase text-blue-400">November 2017 - July 2019</time>
+                    <h3 class="text-2xl font-bold text-white mt-1">Network Engineer</h3>
+                    <p class="text-lg text-gray-400">PT Time Excelindo</p>
+                     <ul class="text-gray-300 mt-4 list-disc list-inside space-y-2">
+                        <li>Designed and deployed company LANs, WANs, servers, and wireless networks.</li>
+                        <li>Configured and maintained network hardware, including servers, routers, firewalls, load balancers, switches, and UPS systems.</li>
+                    </ul>
+                </div>
             </div>
         </section>
 
         <!-- GitHub Projects Section -->
         <section id="projects" class="py-20 fade-in-section">
-            <div class="text-center mb-12">
+            <div class="text-center mb-12 animate-child">
                 <h2 class="text-3xl md:text-4xl font-bold text-white">GitHub Projects</h2>
                 <p class="text-lg text-gray-400 mt-2">A selection of my open-source contributions and personal projects.</p>
             </div>
             <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project Card 1 -->
-                <div class="bg-gray-800 p-6 rounded-lg border border-gray-700 flex flex-col h-full glow-effect">
+                <div class="bg-gray-800 p-6 rounded-lg border border-gray-700 flex flex-col h-full glow-effect animate-child">
                     <h3 class="text-xl font-bold text-white">K8s Automation Scripts</h3>
                     <p class="text-gray-400 mt-2 flex-grow">A collection of Bash and Python scripts to automate Kubernetes cluster setup, deployment, and maintenance tasks.</p>
                     <div class="mt-4 flex flex-wrap gap-2">
@@ -190,7 +258,7 @@
                     </a>
                 </div>
                 <!-- Project Card 2 -->
-                <div class="bg-gray-800 p-6 rounded-lg border border-gray-700 flex flex-col h-full glow-effect">
+                <div class="bg-gray-800 p-6 rounded-lg border border-gray-700 flex flex-col h-full glow-effect animate-child">
                     <h3 class="text-xl font-bold text-white">CloudFormation Templates</h3>
                     <p class="text-gray-400 mt-2 flex-grow">A library of reusable AWS CloudFormation templates for provisioning common architectures like VPCs, EC2 instances, and RDS databases.</p>
                     <div class="mt-4 flex flex-wrap gap-2">
@@ -204,7 +272,7 @@
                     </a>
                 </div>
                 <!-- Project Card 3 -->
-                <div class="bg-gray-800 p-6 rounded-lg border border-gray-700 flex flex-col h-full glow-effect">
+                <div class="bg-gray-800 p-6 rounded-lg border border-gray-700 flex flex-col h-full glow-effect animate-child">
                     <h3 class="text-xl font-bold text-white">Prometheus Exporter in Go</h3>
                     <p class="text-gray-400 mt-2 flex-grow">A custom Prometheus exporter written in Go to expose application-specific metrics for monitoring with Grafana.</p>
                     <div class="mt-4 flex flex-wrap gap-2">
@@ -223,12 +291,12 @@
         <!-- Contact Section -->
         <section id="contact" class="py-20 fade-in-section">
             <div class="max-w-6xl mx-auto">
-                <div class="text-center mb-12">
+                <div class="text-center mb-12 animate-child">
                     <h2 class="text-3xl md:text-4xl font-bold text-white">Get In Touch</h2>
                     <p class="text-lg text-gray-400 mt-2">Let's discuss your next project.</p>
                 </div>
         
-                <div class="bg-gray-800 rounded-lg border border-gray-700 p-8 md:p-12">
+                <div class="bg-gray-800 rounded-lg border border-gray-700 p-8 md:p-12 animate-child">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                         <!-- Left Column: Info & CTA -->
                         <div>
@@ -245,8 +313,8 @@
                                 </p>
                             </div>
                              <div class="mt-8">
-                                <a href="mailto:aji.fauzan@example.com" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-blue-700 transition duration-300 inline-block glow-effect">
-                                    aji.fauzan@example.com
+                                <a href="mailto:ajifauzan209@gmail.com" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-blue-700 transition duration-300 inline-block glow-effect">
+                                    ajifauzan209@gmail.com
                                 </a>
                             </div>
                         </div>
