Add SEO and social sharing meta tags to index.html. Improved visibility and sharing capabilities for the portfolio site.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aji Fauzan - DevOps & Cloud Engineer</title>
+
+    <!-- SEO and Social Sharing Meta Tags -->
+    <meta name="description" content="The portfolio of Aji Fauzan, an experienced DevOps Engineer and Cloud Infrastructure Specialist with over 7 years of expertise.">
+    <meta property="og:title" content="Aji Fauzan - DevOps & Cloud Engineer">
+    <meta property="og:description" content="Experienced DevOps Engineer specializing in cloud infrastructure, CI/CD, IaC, and Agile methodologies.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://placehold.co/1200x630/111827/E5E7EB?text=Aji+Fauzan">
+    <meta property="og:url" content="https://your-domain.com"> <!-- Replace with your actual domain -->
+
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts (Inter) -->
