--- a/index.html
+++ b/index.html
@@ -249,51 +249,15 @@
         <section id="projects" class="py-20 fade-in-section">
             <div class="text-center mb-12 animate-child">
                 <h2 class="text-3xl md:text-4xl font-bold text-white">GitHub Projects</h2>
-                <p class="text-lg text-gray-400 mt-2">A selection of my open-source contributions and personal projects.</p>
+                <p class="text-lg text-gray-400 mt-2">Explore my open-source contributions and personal projects.</p>
             </div>
-            <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Project Card 1 -->
-                <div class="bg-gray-800 p-6 rounded-lg border border-gray-700 flex flex-col h-full glow-effect animate-child">
-                    <h3 class="text-xl font-bold text-white">K8s Automation Scripts</h3>
-                    <p class="text-gray-400 mt-2 flex-grow">A collection of Bash and Python scripts to automate Kubernetes cluster setup, deployment, and maintenance tasks.</p>
-                    <div class="mt-4 flex flex-wrap gap-2">
-                        <span class="bg-blue-900 text-blue-300 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">Python</span>
-                        <span class="bg-gray-700 text-gray-300 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">Bash</span>
-                        <span class="bg-indigo-900 text-indigo-300 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">Kubernetes</span>
-                    </div>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="inline-flex items-center mt-6 text-blue-400 hover:text-blue-300 transition duration-300">
-                        View on GitHub
-                        <svg class="w-4 h-4 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                    </a>
-                </div>
-                <!-- Project Card 2 -->
-                <div class="bg-gray-800 p-6 rounded-lg border border-gray-700 flex flex-col h-full glow-effect animate-child">
-                    <h3 class="text-xl font-bold text-white">CloudFormation Templates</h3>
-                    <p class="text-gray-400 mt-2 flex-grow">A library of reusable AWS CloudFormation templates for provisioning common architectures like VPCs, EC2 instances, and RDS databases.</p>
-                    <div class="mt-4 flex flex-wrap gap-2">
-                        <span class="bg-yellow-900 text-yellow-300 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">AWS</span>
-                        <span class="bg-red-900 text-red-300 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">CloudFormation</span>
-                        <span class="bg-green-900 text-green-300 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">IaC</span>
-                    </div>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="inline-flex items-center mt-6 text-blue-400 hover:text-blue-300 transition duration-300">
-                        View on GitHub
-                        <svg class="w-4 h-4 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                    </a>
-                </div>
-                <!-- Project Card 3 -->
-                <div class="bg-gray-800 p-6 rounded-lg border border-gray-700 flex flex-col h-full glow-effect animate-child">
-                    <h3 class="text-xl font-bold text-white">Prometheus Exporter in Go</h3>
-                    <p class="text-gray-400 mt-2 flex-grow">A custom Prometheus exporter written in Go to expose application-specific metrics for monitoring with Grafana.</p>
-                    <div class="mt-4 flex flex-wrap gap-2">
-                        <span class="bg-cyan-900 text-cyan-300 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">Go Lang</span>
-                        <span class="bg-orange-900 text-orange-300 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">Prometheus</span>
-                        <span class="bg-pink-900 text-pink-300 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded">Monitoring</span>
-                    </div>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="inline-flex items-center mt-6 text-blue-400 hover:text-blue-300 transition duration-300">
-                        View on GitHub
-                        <svg class="w-4 h-4 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                    </a>
-                </div>
+            <div class="text-center animate-child" style="transition-delay: 0.2s;">
+                <a href="https://github.com/dieforareason" target="_blank" rel="noopener noreferrer" class="bg-gray-800 text-white font-bold py-4 px-8 rounded-lg hover:bg-gray-700 transition duration-300 inline-flex items-center space-x-3 glow-effect border border-gray-600">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12c0 4.418 2.865 8.168 6.839 9.492.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.031-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.203 2.398.1 2.651.64.7 1.03 1.595 1.03 2.688 0 3.848-2.338 4.695-4.566 4.942.359.308.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.001 10.001 0 0022 12c0-5.523-4.477-10-10-10z" clip-rule="evenodd"></path>
+                    </svg>
+                    <span>Visit My GitHub Profile</span>
+                </a>
             </div>
         </section>
 
@@ -391,4 +355,5 @@
 
 </body>
 </html>
+
 
