--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         .fade-in-section.is-visible .animate-child:nth-child(3) { transition-delay: 0.3s; }
         .fade-in-section.is-visible .animate-child:nth-child(4) { transition-delay: 0.4s; }
         .fade-in-section.is-visible .animate-child:nth-child(5) { transition-delay: 0.5s; }
+        .fade-in-section.is-visible .animate-child:nth-child(6) { transition-delay: 0.6s; }
     </style>
 </head>
 <body class="antialiased">
@@ -82,7 +83,8 @@
                 <a href="#about" class="text-gray-300 hover:text-white transition duration-300">About</a>
                 <a href="#skills" class="text-gray-300 hover:text-white transition duration-300">Skills</a>
                 <a href="#experience" class="text-gray-300 hover:text-white transition duration-300">Experience</a>
-                <a href="#projects" class="text-gray-300 hover:text-white transition duration-300">Projects</a>
+                <a href="#live-projects" class="text-gray-300 hover:text-white transition duration-300">Featured Work</a>
+                <a href="#github" class="text-gray-300 hover:text-white transition duration-300">GitHub</a>
                 <a href="#contact" class="text-gray-300 hover:text-white transition duration-300">Contact</a>
             </nav>
             <div class="md:hidden">
@@ -245,10 +247,62 @@
             </div>
         </section>
 
-        <!-- GitHub Projects Section -->
-        <section id="projects" class="py-20 fade-in-section">
+        <!-- Featured Work Section -->
+        <section id="live-projects" class="py-20 fade-in-section">
             <div class="text-center mb-12 animate-child">
-                <h2 class="text-3xl md:text-4xl font-bold text-white">GitHub Projects</h2>
+                <h2 class="text-3xl md:text-4xl font-bold text-white">Featured Work</h2>
+                <p class="text-lg text-gray-400 mt-2">A selection of live SaaS platforms I have contributed to.</p>
+            </div>
+            <div class="max-w-3xl mx-auto">
+                <div class="border-t border-gray-700">
+                    <!-- Project Item -->
+                    <div class="animate-child flex flex-wrap justify-between items-center py-6 border-b border-gray-700 gap-4">
+                        <div>
+                            <h3 class="text-xl font-bold text-white">BNI FSCM</h3>
+                            <p class="text-gray-400">Financial Supply Chain Management platform.</p>
+                        </div>
+                        <a href="https://bnifscmnv.bni.co.id/" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition duration-300 font-semibold inline-flex items-center flex-shrink-0">
+                            Visit Site <svg class="w-4 h-4 ml-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                        </a>
+                    </div>
+                    <!-- Project Item -->
+                    <div class="animate-child flex flex-wrap justify-between items-center py-6 border-b border-gray-700 gap-4">
+                        <div>
+                            <h3 class="text-xl font-bold text-white">HDBANK VCF</h3>
+                            <p class="text-gray-400">Supply Chain Management platform in Vietnam.</p>
+                        </div>
+                        <a href="https://vcf.hdbank.com.vn/" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition duration-300 font-semibold inline-flex items-center flex-shrink-0">
+                           Visit Site <svg class="w-4 h-4 ml-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                        </a>
+                    </div>
+                    <!-- Project Item -->
+                    <div class="animate-child flex flex-wrap justify-between items-center py-6 border-b border-gray-700 gap-4">
+                        <div>
+                            <h3 class="text-xl font-bold text-white">Abacus</h3>
+                            <p class="text-gray-400">Supply Chain Management platform.</p>
+                        </div>
+                        <a href="https://abacus-tfs.com/login" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition duration-300 font-semibold inline-flex items-center flex-shrink-0">
+                            Visit Site <svg class="w-4 h-4 ml-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                        </a>
+                    </div>
+                    <!-- Project Item -->
+                    <div class="animate-child flex flex-wrap justify-between items-center py-6 border-b border-gray-700 gap-4">
+                        <div>
+                            <h3 class="text-xl font-bold text-white">ID2</h3>
+                            <p class="text-gray-400">B2B and Supply Chain Management platform.</p>
+                        </div>
+                        <a href="https://id2.asyx.com/" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition duration-300 font-semibold inline-flex items-center flex-shrink-0">
+                           Visit Site <svg class="w-4 h-4 ml-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- GitHub Projects Section -->
+        <section id="github" class="py-20 fade-in-section">
+            <div class="text-center mb-12 animate-child">
+                <h2 class="text-3xl md:text-4xl font-bold text-white">GitHub</h2>
                 <p class="text-lg text-gray-400 mt-2">Explore my open-source contributions and personal projects.</p>
             </div>
             <div class="text-center animate-child" style="transition-delay: 0.2s;">
@@ -355,5 +409,4 @@
 
 </body>
 </html>
-
 
