Update index.html to change the Open Graph URL meta tag to the actual domain and add a download link for the CV, enhancing user engagement and SEO.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Experienced DevOps Engineer specializing in cloud infrastructure, CI/CD, IaC, and Agile methodologies.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://placehold.co/1200x630/111827/E5E7EB?text=Aji+Fauzan">
-    <meta property="og:url" content="https://your-domain.com"> <!-- Replace with your actual domain -->
+    <meta property="og:url" content="https://ajifa.uk.com">
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -102,9 +102,13 @@
                 <p class="mt-6 text-lg md:text-xl text-gray-400 animate-child">
                     With over 7 years of expertise in cloud infrastructure, CI/CD pipelines, Infrastructure as Code (IaC), and Agile methodologies. Proven track record in leading DevOps teams, managing hybrid cloud environments, and ensuring compliance with ISO27001 standards. Strong focus on automation, monitoring, and security to deliver scalable and efficient solutions.
                 </p>
-                <div class="mt-10 animate-child">
-                    <a href="#contact" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-blue-700 transition duration-300 glow-effect">
+                <div class="mt-10 flex flex-wrap items-center gap-4 animate-child">
+                    <a href="#contact" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition duration-300 glow-effect">
                         Get In Touch
+                    </a>
+                    <a href="https://raw.githubusercontent.com/dieforareason/aji-portofolio/main/aji-fauzan.pdf" target="_blank" download class="border-2 border-gray-500 text-gray-300 font-bold py-3 px-6 rounded-lg hover:bg-gray-700 hover:border-gray-700 transition duration-300 inline-flex items-center">
+                        <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
+                        Download CV
                     </a>
                 </div>
             </div>
