--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Experienced DevOps Engineer specializing in cloud infrastructure, CI/CD, IaC, and Agile methodologies.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://placehold.co/1200x630/111827/E5E7EB?text=Aji+Fauzan">
-    <meta property="og:url" content="https://ajifa.uk.com">
+    <meta property="og:url" content="https://ajifa.uk"> <!-- Replace with your actual domain -->
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -109,6 +109,10 @@
                     <a href="https://raw.githubusercontent.com/dieforareason/aji-portofolio/main/aji-fauzan.pdf" target="_blank" download class="border-2 border-gray-500 text-gray-300 font-bold py-3 px-6 rounded-lg hover:bg-gray-700 hover:border-gray-700 transition duration-300 inline-flex items-center">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
                         Download CV
+                    </a>
+                    <a href="https://www.linkedin.com/in/aji-fauzan-225113135/" target="_blank" rel="noopener noreferrer" class="border-2 border-gray-500 text-gray-300 font-bold py-3 px-6 rounded-lg hover:bg-gray-700 hover:border-gray-700 transition duration-300 inline-flex items-center">
+                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"></path></svg>
+                        LinkedIn
                     </a>
                 </div>
             </div>
