--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
                     <!-- Project Item -->
                     <div class="animate-child flex flex-wrap justify-between items-center py-6 border-b border-gray-700 gap-4">
                         <div>
-                            <h3 class="text-xl font-bold text-white">Abacus</h3>
+                            <h3 class="text-xl font-bold text-white">Convergence Capital</h3>
                             <p class="text-gray-400">Supply Chain Management platform.</p>
                         </div>
-                        <a href="https://abacus-tfs.com/login" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition duration-300 font-semibold inline-flex items-center flex-shrink-0">
+                        <a href="https://www.convergence-tfs.com" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition duration-300 font-semibold inline-flex items-center flex-shrink-0">
                             Visit Site <svg class="w-4 h-4 ml-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                         </a>
                     </div>
